# rag-doc-bot-examensarbete

./: .gitignore  README.md  pyproject.toml
backend/: data_models.py  ingestion.py  rag.py  retrieval.py
explorations/: exploration.ipynb
frontend/: app.py
